--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,9 +1,15 @@
 
 <h1><%= @order.title %></h1>
 <h2><%= @order.body %></h2>
+<% if logged_in? %>
+  <%= render '/suggestions/suggestion_form' %>
+<% else %>
+<div class=please_login>
+  ログインして提案しましょう
+</div>
 
+<% end %>
 <h3>提案一覧</h3>
 <% @order.suggestions.each do |suggestion| %>
-  <% suggestion_link ='https://5815546607e74e9992c31e3e6942c7fe.vfs.cloud9.ap-northeast-1.amazonaws.com/suggestion/' + suggestion.id.to_s %>
   <%= link_to suggestion.title, suggestion %><br>
 <% end %>
