image upload add

--- a/app/views/suggestions/_suggestion_form.html.erb
+++ b/app/views/suggestions/_suggestion_form.html.erb
@@ -7,7 +7,7 @@
   <div class='body_form'>
     <%= f.text_area :body,placeholder: "詳細な提案の内容を記入してください", class: 'form-control' %>
   <span class="image">
-    <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+    <%= f.file_field :images,multiple: true, accept: "image/jpeg,image/gif,image/png" %>
   </span>
   <%= f.submit '提案を送信', class: "btn btn-primary" %>
 <% end %>
