--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,13 +1,17 @@
 
 <h1><%= @order.title %></h1>
+<% if @order.images.attached? %>
+  <% @order.images.each do |image| %>
+    <%= link_to (image_tag display_image(image)) , image%>
+  <% end %>
+<% end %>
 <h2><%= @order.body %></h2>
 <% if logged_in? %>
   <%= render '/suggestions/suggestion_form' %>
 <% else %>
-<div class=please_login>
-  ログインして提案しましょう
-</div>
-
+  <div class=please_login>
+    ログインして提案しましょう
+  </div>
 <% end %>
 <h3>提案一覧</h3>
 <% @order.suggestions.each do |suggestion| %>
