--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -2,6 +2,11 @@
   <%= link_to @order.title ,@order %>
 </div>
 <h1><%= @suggestion.title %></h1>
+<% if @suggestion.images.attached? %>
+  <% @suggestion.images.each do |image| %>
+    <%= link_to (image_tag display_image(image)) , image%>
+  <% end %>
+<% end %>
 <h2><%= @suggestion.body %></h2>
 
 
