--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,10 @@
 <li>
+  <% @image =user.image %>
+  <% if @image.present? %>
+    <%= image_tag @image.url, class: "user_icon" %>
+  <% else %>
+    <%= image_tag '/uploads/user/image/upper_body.jpg', class: "user_icon" %>
+  <% end %>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
     | <%= link_to "delete", user, method: :delete,
