--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -79,9 +79,7 @@ input, textarea, select, .uneditable-input {
   @include box_sizing;
 }
 
-input {
-  height: auto !important;
-}
+
 
 #error_explanation {
   color: red;
@@ -122,4 +120,63 @@ input {
     padding: 10px 0;
     border-bottom: 1px solid $gray-lighter;
   }
+}
+
+input {
+  height: auto;
+}
+
+/*　setting */
+/* ユーザーアイコン*/
+.account-page__inner--icon{
+  &__input {
+    margin: auto;
+    width: 180px;
+    height: 180px;
+    border-radius: 100px;
+    overflow: hidden;
+    position: relative;
+     opacity: 10;
+    &__image {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    &__image2 {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    &__btn {
+      position: absolute;
+      top: 0;
+      right: 0;
+      // 解決方法(追加)
+      width: 180px;
+      height: 180px;
+      border-radius: 100px;
+      font-size: 0px;
+      // 解決方法(ここまで)
+      opacity: 100;
+      cursor: pointer;
+    }
+  }
+}
+  /*profile */
+  textarea {
+  margin: auto;
+  width: 400px;
+  height: 150px;
+  background-color: black;
+  color: white;
+  border: solid 1px rgb(150, 150, 150);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+/* user_icon */
+.user_icon{
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
 }
