--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", '/orders' %></li>
         <% if logged_in? %>
-          <li><%= link_to "Mypage", current_user %></li>
+          <li><%= link_to "Mypage", '/my_orders' %></li>
           <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
