--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,36 @@
 <h1>Update your profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
+    <%= form_with(model: current_user, local: true) do |f| %>
+      <div class='account-page__inner--icon'>
+        <div class='account-page__inner--icon__label'>
+        </div>
+        <div class='account-page__inner--icon__input'>
+          <% if @image.present? %>
+            <%= image_tag @image.url, class: 'account-page__inner--icon__input__image', width: '100%' %>
+            <div class='account-page__inner--icon__input__image2'></div>
+            <%= f.file_field :image, class: 'account-page__inner--icon__input__btn', id: 'upload-icon' %>
+          <% end %>
+        </div>
+      </div>
+      <div class='account-page__inner--user-form'>
+      <%= f.label 'プロフィール' %>
+      <%= f.text_field :profile, autocomplete: 'off', class: 'form-control' %>
+      
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+    
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+    
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+    
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    
+      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
 </div>
