--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,7 @@
 <% user = User.find(comment.user_id)%>
+<% if user.image.present? %>
+  <%= image_tag user.image.url, class: "user_icon" %>
+<% end %>
 <%= link_to user.name ,user %>
 <% if comment.images.attached? %>
   <% comment.images.each do |image| %>
