--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'Edit user') %>
 <% provide(:button_text, 'Save changes') %>
+<%= javascript_pack_tag 'icon_loader',media: 'all'%>
+
 <h1>Update your profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
