--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,8 @@
     <div class='userbox__top'>
       <div class='userbox__top__left'>
         <div class='userbox__top__left__icon'>
-          <% if @image.present? %>
-            <%= image_tag @image.url, class: "user_icon" %>
+          <% if @avatar.present? %>
+            <%= image_tag @avatar, class: "user_icon" %>
           <% end %>
         </div>
       </div>
