--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -15,5 +15,5 @@
 <% end %>
 <h3>提案一覧</h3>
 <% @order.suggestions.each do |suggestion| %>
-  <%= link_to image_tag(User.find(suggestion.user_id).image.url, class: "user_icon") %><%= link_to suggestion.title, suggestion %><br>
+  <%= link_to image_tag(User.find(suggestion.user_id).avatar.url, class: "user_icon") %><%= link_to suggestion.title, suggestion %><br>
 <% end %>
