--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,11 @@
+<% @tag_list.each do |list|%>
+<%=list.name %>
+<%="(#{list.orders.count})" %><% end %>
+
 <%= link_to '新しい依頼を作成する','orders/new' %>
 <h2> 新着依頼 </h2>
  <% @orders.each do |order| %>
-   <%= link_to order.title,order %> <br>
+   <%= link_to order.title,order %>
+   <i class="fas fa-tag"><%= order.tags.map(&:name).join(', ') %></i><br>
  <% end %>
  
