--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,6 +6,9 @@
   <% end %>
 <% end %>
 <h2><%= @order.body %></h2>
+<% @order_tags.each do |tag| %>
+  <%=tag.name%><%="(#{tag.orders.count})" %>
+<% end %>
 <% if logged_in? %>
   <%= render '/suggestions/suggestion_form' %>
 <% else %>
