--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -167,11 +167,12 @@ input {
   margin: auto;
   width: 400px;
   height: 150px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   border: solid 1px rgb(150, 150, 150);
   border-radius: 5px;
   padding: 10px;
+  resize: none;
 }
 
 /* user_icon */
@@ -179,4 +180,10 @@ input {
   width: 50px;
   height: 50px;
   border-radius: 50px;
+}
+
+/* 画像アップロードプレビュー画像 */
+.preview_images{
+  width: 150px;
+  height: 150px;
 }
