--- a/app/views/orders/_order_form.html.erb
+++ b/app/views/orders/_order_form.html.erb
@@ -1,17 +1,55 @@
+<%= javascript_pack_tag 'image_uploader',media: 'all'%>
 <%= form_with(model: @order, local: true) do |f| %>
-  <%= render 'shared/error_messages', object: @order %>
-  <div class='title_form'>
-    <%= f.text_field :title,placeholder: "タイトルを入力してください",class: 'form-control' %>
+  <% if @order.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
+
+      <ul>
+      <% @order.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="sell__block__f__name">
+    <div class="f-group__name">
+      <div class='title_f'>
+        <%= f.label 'タイトル' %>
+        <%= f.text_field :title,placeholder: "タイトルを入力してください",class: 'f-control' %>
+      </div>
+      <div class='body_f'>
+        <%= f.label 'オーダーの詳細' %>
+        <%= f.text_area :body,placeholder: "詳細な依頼内容を記入してください", class: 'f-control' %>
+      <div class="field">
+        <%= f.label "タグ (,で区切ると複数タグ登録できます)" %>
+        <%= f.text_field :name,value: @tag_list,class:"f-control"%>
+      </div>
+    </div>
   </div>
-  <div class='body_form'>
-    <%= f.text_area :body,placeholder: "詳細な依頼内容を記入してください", class: 'form-control' %>
-  <span class="image">
-    <%= f.file_field :images, multiple: true, accept: "image/jpeg,image/gif,image/png" %>
-  </span>
-  <div class="field">
-    <%= f.label"タグ (,で区切ると複数タグ登録できます)" %>
-    <%= f.text_field :name,value: @tag_list,class:"form-control"%>
+
+  <div class="images-field clearfix">
+    <div  class="field">
+      <%= f.label :images %>
+      <%= f.file_field :images, multiple: true, class: "file-input" %>
+    </div>
+    <% if @order.images.attached? %>
+      <% @order.images.each do |image| %>
+        <div class="image-box">
+          <% new_image = image.variant(resize: "150x150^") %>
+          <%= image_tag new_image %>
+          <p> <%= image.filename %> </p>
+          <%= f.hidden_field :images , name: "order[images][]", value: "#{image.blob.id}", style: "display: none;", class: "order-images-input" %>
+          <%= link_to "Edit", "", class: "btn-edit" %>
+          <%= file_field "edit-image","" , class: "edit-image-file-input file-input", style: "display: none;"%>
+          <%= link_to "Delete", "", class: "btn-delete" %>
+        </div>
+      <% end %>
+    <% end %>
   </div>
-  
-  <%= f.submit '依頼送信', class: "btn btn-primary" %>
+
+  <div class="sell__block__f__btn">
+      <%= f.submit "オーダー送信",class: "btn-default__btn-red" %>
+  </div>
+
 <% end %>
