--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -8,7 +8,7 @@
 <h2><%= @order.body %></h2>
 
 <%= render 'shared/tag_index' %>
-
+<%= link_to 'オーダーを編集する', edit_order_path %>
 
 <% if logged_in? %>
   <%= render '/suggestions/suggestion_form' %>
