--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Sign up') %>
 <% provide(:button_text, 'Create my account') %>
+<%= javascript_pack_tag 'icon_loader',media: 'all'%>
 <h1>Sign up</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
