--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,6 +1,11 @@
 <div class='back_link'>
   <%= link_to @order.title ,@order %>
 </div>
+
+<% if @suggestion.user_id == current_user.id %>
+  <%= link_to '提案を編集する', edit_suggestion_path %>
+<% end %>
+
 <div class='suggestion_title'>
   <% user = User.find(@suggestion.user_id)%>
   <% if user.avatar.present? %>
