--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -187,3 +187,15 @@ input {
   width: 150px;
   height: 150px;
 }
+
+/*number_fieldのスピンボタンを削除する */
+/*chrome safari */
+input[type="number"]::-webkit-outer-spin-button, 
+input[type="number"]::-webkit-inner-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+} 
+/*firefox*/
+input[type="number"] { 
+  -moz-appearance:textfield; 
+} 
