--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,7 +33,20 @@
     
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-    
+      
+      <h2>発送先情報</h2>
+      <%= f.label '受取人名' %>
+      <%= f.text_field :receiver_name, class: 'form-control' %>
+      
+      <%= f.label :'郵便番号' %>
+      <%= f.text_field :postcode, class: 'form-control' %>
+      
+      <%= f.label '住所' %>
+      <%= f.text_field :address, class: 'form-control' %>
+      
+      <%= f.label 'TEL' %>
+      <%= f.text_field :tel, class: 'form-control' %>
+
       <%= f.submit yield(:button_text), class: "btn btn-primary" %>
       </div>
     <% end %>
