--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,21 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", '/orders' %></li>
+<div class="navbar navbar-expand-sm navbar-light bg-light">
+  <button style='background-color: #F8F9FA;color: green;border: red;'class="btn btn-primary btn-color" type="button" data-toggle="collapse" data-target="#global_nav" aria-expanded="false" aria-controls="collapseExample">
+     <i class="fa-solid fa-bars"></i>
+  </button>
+  <div class="collapse" id="global_nav">
+      <ul class="navbar-nav" id="global_navlist">
         <% if logged_in? %>
-          <li><%= link_to "Mypage", '/my_orders' %></li>
-          <li><%= link_to "Users", users_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
+          <li class="nav-item"><%= link_to "TOP", '/orders' , class: 'nav-link'%> </li>
+          <li class="nav-item"><%= link_to "MY PAGE", '/my_orders' , class: 'nav-link'%> </li>
+          <li class="nav-item"><%= link_to "SETTING", edit_user_path(current_user), class: 'nav-link' %> </li>
+          <li class="nav-item"><%= link_to "LOG OUT", logout_path, method: :delete , class: 'nav-link'%> </li>
         <% else %>
-          <li><%= link_to "Log in", login_path %></li>
+          <li class="nav-item"><%= link_to "TOP", '/orders' , class: 'nav-link'%> </li>
+          <li class="nav-item"><%= link_to "LOG IN", '/login' , class: 'nav-link'%> </li>
         <% end %>
       </ul>
-    </nav>
   </div>
-</header>
+  <% if logged_in? %>
+    <%= render 'shared/new_order' %>
+  <% end %>
+</div>
