--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 
     <%= stylesheet_link_tag 'application', media: 'all'%>
     <%= javascript_pack_tag 'application'%>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <%= stylesheet_pack_tag 'application' %>
+
   </head>
 
   <body>
