--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,7 +7,7 @@
 <h2><%= @order.body %></h2>
 
 <%= render 'shared/tag_index' %>
-<% if @order.user_id == current_user.id && @order.status == 'pending'%>
+<% if logged_in? && @order.user_id == current_user.id && @order.status == 'pending'%>
   <%= link_to 'オーダーを編集する', edit_order_path %>
 <% end %>
 <% if @order.status == 'pending' %>
