--- a/app/views/shared/_tag_index.html.erb
+++ b/app/views/shared/_tag_index.html.erb
@@ -1,3 +1,4 @@
 <% @tag_list.each do |tag|%>
-  <%= link_to tag.name + "(#{tag.orders.count})", tags_show_path(tag_id: tag.id) %>
+  
+  <i class='tag'><%= link_to tag.name + "(#{tag.orders.count})", tags_show_path(tag_id: tag.id) %></i>
 <% end %>
